[package]
name = "lambda_calculus"
version = "0.1.0"
authors = ["enter"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
sexpr_ir = { version="*", git="https://github.com/imlyzh/sexpr_ir.git" }